[project]
name = "b3d"
version = "0.0.1"
description = "A 3D computer vision library"
license = { text = "Apache 2.0" }
authors = [{ name = "Nishad Gothoskar", email = "nishadg@mit.edu" }]
requires-python = ">= 3.10"
dependencies = []

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]
system-requirements = { cuda = "12" }
conda-pypi-map = { "conda-forge" = "torch.json" }

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.environments]

[tool.pixi.pypi-options]
index-url = "https://pypi.org/simple"
extra-index-urls = [
    "https://oauth2accesstoken@us-west1-python.pkg.dev/probcomp-caliban/probcomp/simple",
]

[tool.pixi.pypi-dependencies]
b3d = { path = ".", editable = true }
carvekit = "==4.1.2"
pykitti = "==0.3.1"
pyliblzfse = { git = "https://github.com/ydkhatri/pyliblzfse.git" }
pyransac3d = ">=0.6.0,<0.7"
torch = "*"

[tool.pixi.dependencies]
cuda-toolkit = "*"
gcc = "*"
jax = "*"
jaxlib = { version = "0.4.28", build = "cuda12*" }
libnvjitlink = "*"
optax = ">=0.2.2,<0.3"
pytorch = { version = "==2.3.0", build = "cuda12*" }
torchvision = "==0.18.0"
distinctipy = ">=1.3.4,<1.4"
ffmpeg = "*"
fire = ">=0.6.0,<0.7"
imageio = "*"
ipykernel = "*"
ipython = ">=8.26.0,<8.27"
jupyter = ">=1.0.0,<1.1"
jupyterlab = "*"
jupytext = "*"
matplotlib = ">=3.9.1,<3.10"
natsort = ">=8.4.0,<8.5"
numpy = "<2.0.0"
ninja = "*"
pdoc = "*"
pillow = "==10.3.0"
polars = ">=0.20,<0.21"
pyright = "*"
pytest = "*"
python-lzf = "*"
py-opencv = "*"
rerun-sdk = "==0.17.0"
ruff = "*"
scikit-learn = ">=1.5.1,<1.6"
scipy = ">=1.14.0,<1.15"
trimesh = "==4.2.4"
tqdm = "*"
glfw = "*"
libglib = "*"
libglu = "*"
libglvnd-devel-cos7-x86_64 = ">=1.0.1,<1.1"
libglvnd-cos7-x86_64 = ">=1.0.1,<1.1"
mesalib = "*"
mesa-libegl-devel-cos7-x86_64 = "*"
mesa-libegl-cos7-x86_64 = "*"
mesa-libglu-devel-cos7-x86_64 = "*"
mesa-libglu-cos7-x86_64 = "*"

[tool.pixi.activation.env]
XLA_PYTHON_CLIENT_PREALLOCATE = "false"
XLA_PYTHON_CLIENT_ALLOCATOR = "platform"
CPLUS_INCLUDE_PATH = "$CONDA_PREFIX/targets/x86_64-linux/include"
LD_LIBRARY_PATH = "$CONDA_PREFIX/x86_64-conda-linux-gnu/sysroot/usr/lib64"

[tool.pixi.feature.gen-platform.pypi-dependencies]
datasync = "==0.0.2"
genjax = "==0.6.1"
genstudio = "*"

[tool.pixi.tasks.sync]
description = "sync test data"
cmd = "python b3d_pull.py -ow"
cwd = "src/b3d/bucket_utils"

[tool.pixi.sync-ci]
description = "sync test data"
cmd = "python b3d_pull.py"
cwd = "src/b3d/bucket_utils"

[tool.pixi.tasks.rerun]
description = "launch rerun"
cmd = "python scripts/rerun-task.py"

[tool.pixi.tasks.docs]
description = "render docs to docs/static"
cmd = "python -m pdoc --logo https://github.com/probcomp/b3d/assets/66085644/50bc2fc3-c9cd-4139-bed6-9c6d53933622 --math --mermaid -o docs/render/ b3d"

[tool.pixi.tasks.docs.env]
LD_LIBRARY_PATH = "$CONDA_PREFIX/x86_64-conda-linux-gnu/sysroot/usr/lib64"
PDOC_ALLOW_EXEC = "1"


[tool.pixi.tasks.test]
description = "run tests (optionally set TEST_TARGETS)"
cmd = "./scripts/pytest.sh"
depends_on = ["sync", "rerun"]
env = { TEST_TARGETS = "tests" }

[tool.pixi.tasks.test-ci]
description = "run tests (optionally set TEST_TARGETS)"
cmd = "./scripts/pytest.sh"
depends_on = ["sync-ci"]

[tool.pixi.tasks.test-ci.env]
TEST_TARGETS = "tests"
XLA_PYTHON_CLIENT_PREALLOCATE = "false"
XLA_PYTHON_CLIENT_ALLOCATOR = "platform"
CPLUS_INCLUDE_PATH = "$CONDA_PREFIX/targets/x86_64-linux/include"
LD_LIBRARY_PATH = "$CONDA_PREFIX/x86_64-conda-linux-gnu/sysroot/usr/lib64"
RERUN_HEADLESS = "1"

# Python tool configurations

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff.lint]
preview = true
extend-select = ["I"]
select = ["E4", "E7", "E9", "F"]
ignore = ["F403"] # disables "*" import errors
fixable = ["ALL"]
unfixable = []
